added css to folder and color

--- a/paul-website/index.html
+++ b/paul-website/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Paul Ruszkay's personal website</title>
 </head>
 <body>
@@ -18,8 +19,7 @@
     <main>
         <div class="row">
             <div class="text-box">
-                <h1>Exciting
-                </h1>
+                <h2>Exciting</h2>
                 <img src="IMAGE">
                 <h3>Coding Wannabe, semi-nerd, & part time traveler</h3>
                 <h4>Thanks for visiting my space</h4>
