changed all page layouts to match portfolio project layout

--- a/paul-website/background.html
+++ b/paul-website/background.html
@@ -6,16 +6,26 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Document</title>
 </head>
-<body>
-    <h1>Born in New Jersey.</h1>
-    <header>
+<body class="body">
+    <header class="header">
         <h1>Paul Ruszkay</h1>
          <nav>
             <a href="./index.html">Home</a>
             <a href="./about.html">About</a>
             <a href="./contact.html">Contact</a>
          </nav>
-        </header>
+    </header>
+    <main class="main">
+     <h2>Background</h2>
+     <p>
+        Background info about work etc
+     </p>
+    </main>
 </body>
-<footer>Copyright information</footer>
+<footer class="footer">
+    <h2>Copyright information</h2>
+    <p>
+
+    </p>
+</footer>
 </html>
