--- a/paul-website/contact.html
+++ b/paul-website/contact.html
@@ -6,16 +6,29 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Document</title>
 </head>
-<body>
-    <h1>email, instagram, linkedin</h1>
-    <header>
+<body class="body">
+    <header class="header">
         <h1>Paul Ruszkay</h1>
          <nav>
             <a href="./index.html">Home</a>
             <a href="./about.html">About</a>
             <a href="./background.html">Background</a>
          </nav>
-        </header>
+    </header>
+    <main class="main">
+        <h2>email, instagram, linkedin</h2>
+            <p> email, 
+             <br>
+            instagram,
+             <br>
+            linkedin
+            </p>
+    </main>
 </body>
-<footer>Copyright information</footer>
+<footer class="footer">
+    <h2>Copyright information</h2>
+    <p>
+
+    </p>
+</footer>
 </html>
