--- a/paul-website/index.html
+++ b/paul-website/index.html
@@ -6,17 +6,18 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Paul Ruszkay's personal website</title>
 </head>
-<body>
-    <header>
+<body class="body">
+    <header class="header">
     <h1>Paul Ruszkay</h1>
      <nav>
         <a href="./index.html">Home</a>
         <a href="./about.html">About</a>
         <a href="./background.html">Background</a>
         <a href="./contact.html">Contact</a>
+        /* Add portfolio here too /*
      </nav>
     </header>
-    <main>
+    <main class="main">
         <div class="row">
             <div class="text-box">
                 <h2>Exciting</h2>
@@ -28,5 +29,10 @@
         
     </main>
 </body>
-<footer>Copyright information</footer>
+<footer class="footer">
+    <h2>Copyright information</h2>
+    <p>
+
+    </p>
+</footer>
 </html>
