--- a/paul-website/about.html
+++ b/paul-website/about.html
@@ -6,16 +6,26 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Document</title>
 </head>
-<body>
-    <h1>Hey there.  My name is Paul.</h1>
-    <header>
+<body class="body">
+    <header class="header">
         <h1>Paul Ruszkay</h1>
          <nav>
             <a href="./index.html">Home</a>
             <a href="./background.html">Background</a>
             <a href="./contact.html">Contact</a>
          </nav>
-        </header>
+    </header>
+    <main class="main">
+        <h2>Hey there.  My name is Paul.</h2>
+        <p>
+            Information about me
+        </p>
+    </main>
 </body>
-<footer>Copyright information</footer>
+<footer class="footer">
+    <h2>Copyright information</h2>
+    <p>
+
+    </p>
+</footer>
 </html>
