--- a/paul-website/contact.html
+++ b/paul-website/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Document</title>
 </head>
 <body class="body">
@@ -15,13 +15,16 @@
             <a href="./background.html">Background</a>
          </nav>
     </header>
-    <main class="main">
-        <h2>email, instagram, linkedin</h2>
-            <p> email, 
+    <main id="contact" class="main">
+        <h2>Feel free to reach out via anything below </h2>
+        <br>
+            <p>
+                <ul> 📧 Email:  PaulRuszkay@gmail.com</ul> 
              <br>
-            instagram,
+                <ul><a href="" style="color:grey">📁 Instagram</a></ul>
              <br>
-            linkedin
+                <ul><a href="" style="color:grey">📁 Linkedin</a></ul>
+
             </p>
     </main>
 </body>
