--- a/paul-website/index.html
+++ b/paul-website/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Paul Ruszkay's personal website</title>
 </head>
 <body class="body">
@@ -23,6 +23,7 @@
                 <h2>Exciting</h2>
                 <img src="IMAGE">
                 <h3>Coding Wannabe, semi-nerd, & part time traveler</h3>
+                <br>
                 <h4>Thanks for visiting my space</h4>
             </div>
         </div>
