added comment to html

--- a/paul-website/index.html
+++ b/paul-website/index.html
@@ -8,13 +8,13 @@
 </head>
 <body class="body">
     <header class="header">
-    <h1>Paul Ruszkay</h1>
+    <h1><img src="P R.gif"> Paul Ruszkay</h1>
      <nav>
         <a href="./index.html">Home</a>
         <a href="./about.html">About</a>
         <a href="./background.html">Background</a>
         <a href="./contact.html">Contact</a>
-        /* Add portfolio here too /*
+        /* Add portfolio here too or change About section to the portfolio and make home my about me/*
      </nav>
     </header>
     <main class="main">
